--- a/main.html
+++ b/main.html
@@ -3,14 +3,36 @@
 <html>
 
 <head>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h2>Bootstrap’s Buttons</h2>
+	<div>
+<button  type="button" id = "button-1" type="button" class="btn btn-primary">button-1</button>
+<button type="button" id ="button-2" class="btn btn-outline-secondary">button-2</button>
+<button type="button" id ="button-3" class="btn btn-success btn-lg">button-3</button>
+<button type="button"  id ="button-4" class="btn btn-danger">button-4</button>
+</div>
+<div>
+<button id ="button-5" type="button" class= "btn btn-warning btn-block" >button-5</button>
+
+</div>
+</div>
+<button id ="button-6	" type="button" class="btn btn-info">button-6	</button>
+<button id ="button-7	" type="button" class="btn btn-light">button-7	</button>
+<button  id ="button-8" type="button" class="btn btn-link">button-8	</button>
+
+</div>
+
+	
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 
 </html>
