--- a/main.html
+++ b/main.html
@@ -14,15 +14,15 @@
 <button  type="button" id = "button-1" type="button" class="btn btn-primary">button-1</button>
 <button type="button" id ="button-2" class="btn btn-outline-secondary">button-2</button>
 <button type="button" id ="button-3" class="btn btn-success btn-lg">button-3</button>
-<button type="button"  id ="button-4" class="btn btn-danger">button-4</button>
+<button type="button"  id ="button-4" class="btn btn-danger btn-sm">button-4</button>
 </div>
 <div>
-<button id ="button-5" type="button" class= "btn btn-warning btn-block" >button-5</button>
+<button id ="button-5" type="button" class= "btn btn-warning btn-lg vw-100" >button-5</button>
 
 </div>
 </div>
-<button id ="button-6	" type="button" class="btn btn-info">button-6	</button>
-<button id ="button-7	" type="button" class="btn btn-light">button-7	</button>
+<button id ="button-6" type="button" class="btn btn-info">button-6	</button>
+<button id ="button-7" type="button" class="btn btn-light">button-7	</button>
 <button  id ="button-8" type="button" class="btn btn-link">button-8	</button>
 
 </div>
