--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
 
 </div>
 </div>
-<button id ="button-6" type="button" class="btn btn-info">button-6	</button>
+<button id ="button-6" type="button" class="btn btn-info disabled">button-6	</button>
 <button id ="button-7" type="button" class="btn btn-light">button-7	</button>
 <button  id ="button-8" type="button" class="btn btn-link">button-8	</button>
 
